# nsec-tree-py

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  llms.txt  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
src/nsec_tree/: __init__.py  derive.py  encoding.py  errors.py  event.py  keys.py  mnemonic.py  persona.py  proof.py  recover.py  root.py  validate.py
tests/: test_derive.py  test_encoding.py  test_event.py  test_fuzz.py  test_input_validation.py  test_keys.py  test_mnemonic.py  test_persona.py  test_proof.py  test_recover.py  test_reference_vectors.py  test_root.py  test_smoke.py  test_validate.py  test_vectors.py
tests/vectors/: ts_reference.json
tools/: gen_reference_vectors.mjs  package.json
