[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nsec-tree"
version = "0.1.0"
description = "Deterministic Nostr sub-identity derivation (NIP-IDENTITY-TREES) — Python"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "TheCryptoDonkey" }]
dependencies = ["coincurve>=18", "bech32>=1.2"]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[tool.hatch.build.targets.wheel]
packages = ["src/nsec_tree"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
